profile page updated

--- a/src/Components/Pages/About/About.css
+++ b/src/Components/Pages/About/About.css
@@ -19,7 +19,7 @@
     color: rgb(35, 34, 34);
 }
 
-.about-text-and-link a {
+.return-link {
     display: block;
     text-align: center;
     font-size: 1rem;
