--- a/src/Components/Pages/CreateAccount/CreateAccount.css
+++ b/src/Components/Pages/CreateAccount/CreateAccount.css
@@ -102,6 +102,20 @@
     font-size: 1rem;
 }
 
+.special-email-note {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 0;
+    color: blue;
+    font-weight: 500;
+    /* width: 80%; */
+    background-color: rgba(230, 227, 227, 0.7);
+}
+
+.d-none {
+    display: none;
+}
+
 @media screen and (max-width:768px) {
     .create-account {
         flex-direction: column;
