--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -3,7 +3,7 @@
 }
 
 .profile {
-    width: 300px;
+    width: 325px;
     background-color: rgba(240, 248, 255, 0.8);
     color: rgb(45, 42, 39);
     margin: 5%;
@@ -39,6 +39,15 @@
     width: 100%;
 }
 
+.profile-img a {
+    color: blue;
+    transition: 0.5s;
+}
+
+.profile-img a:hover {
+    color: orangered;
+}
+
 .profile-info {
     display: flex;
     justify-content: space-between;
@@ -65,20 +74,22 @@
     color: maroon;
 }
 
+.edit-icon {
+    color: blue;
+    transition: 0.5s;
+}
+
 .edit-icon:hover {
-    color: rgb(1, 1, 121);
+    color: orangered;
 }
 
 .special-note a {
-    background-color: goldenrod;
-    padding: 2px;
-    border-radius: 5px;
-    color: darkblue;
+    color: blue;
     transition: 0.5s;
 }
 
 .special-note a:hover {
-    background-color: orange;
+    color: orangered;
 }
 
 @media screen and (max-width:768px) {
