--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   background-image: url('./Assets/images/background/bg.webp');
-  min-height: 100vh;
+  /* min-height: 100vh; */
   width: 100vw;
   background-position: center;
   background-repeat: no-repeat;
