--- a/src/Components/Pages/CreateAccount/CreateAccount.css
+++ b/src/Components/Pages/CreateAccount/CreateAccount.css
@@ -74,6 +74,7 @@
     font-weight: 600;
     text-align: start;
     background-color: white;
+    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 6px 0 rgba(0, 0, 0, 0.3);
 }
 
 .sign-up-page-links button:hover {
