--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -3,7 +3,7 @@
 }
 
 .profile {
-    width: 330px;
+    width: 325px;
     background-color: rgba(240, 248, 255, 0.8);
     color: rgb(45, 42, 39);
     margin: 5%;
@@ -101,49 +101,64 @@
 .profile-page-buttons button {
     width: 300px;
     /* padding: 6px 10px; */
-    margin-bottom: 10px;
-    border-radius: 5px;
-    font-weight: 600;
+    margin-bottom: 16px;
+
+
     text-align: start;
     transition: 0.3s;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 .chatbox-btn {
     border: none;
-    background-color: green;
-    color: aliceblue;
+    color: darkolivegreen;
+    background-color: rgb(250, 211, 80);
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
-    font-size: 1.1rem;
+    gap: 40px;
+    font-size: 1.3rem;
+    font-weight: 900;
     margin-bottom: 0;
+    padding-left: 60px;
+    border-radius: 5px;
+    border-top-right-radius: 20px;
 }
 
 .chatbox-btn:hover {
-    background-color: rgb(3, 176, 3);
+    gap: 60px;
+    color: rgb(60, 75, 34)
 }
 
 .logout-btn {
-    background-color: orangered;
-    color: aliceblue;
+    background-color: rgb(251, 103, 70);
+    color: rgb(214, 235, 253);
     border: none;
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-weight: 600;
+    border-radius: 5px;
 }
 
 .logout-btn:hover {
-    background-color: rgb(252, 51, 1);
+    color: white;
+    background-color: red;
 }
 
 .logout-btn p {
-    margin: 10px;
+    margin: 12px;
+    margin-left: 6px;
 }
 
 .delete-account-btn {
     padding: 10px;
     background-color: antiquewhite;
     border: 2px solid salmon;
-    color: rgb(253, 91, 73);
+    color: rgb(253, 55, 33);
     display: flex;
     align-items: center;
+    font-weight: 600;
+    border-radius: 5px;
 }
 
 .delete-account-btn p {
@@ -158,7 +173,7 @@
 
 .delete-account-btn:hover {
     border: 2px solid rgb(254, 1, 1);
-    color: rgb(254, 1, 1);
+    color: rgb(255, 6, 6);
 }
 
 .delete-account-btn:hover .cross {
