--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -65,7 +65,7 @@
 .user-dp {
     height: 100px;
     width: 100px;
-    border: 15px solid rgba(240, 248, 255);
+    border: 10px solid rgb(250, 211, 80);
     border-radius: 20px;
     margin-bottom: 12px;
 }
@@ -98,6 +98,10 @@
     color: rgb(232, 64, 3);
 }
 
+.profile-page-buttons {
+    animation: show-delay 3s linear 0s 1
+}
+
 .profile-page-buttons button {
     width: 300px;
     /* padding: 6px 10px; */
@@ -126,23 +130,31 @@
 }
 
 .chatbox-btn:hover {
+    padding-left: 90px;
     gap: 60px;
-    color: rgb(60, 75, 34)
+    color: rgb(60, 75, 34);
+    background-color: rgb(251, 205, 55);
 }
 
 .logout-btn {
     background-color: rgb(251, 103, 70);
-    color: rgb(214, 235, 253);
+    color: rgb(250, 238, 238);
     border: none;
     font-size: 0.9rem;
     font-weight: 500;
     font-weight: 600;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-left: 10px;
+    /* margin-bottom: 15px; */
 }
 
 .logout-btn:hover {
     color: white;
-    background-color: red;
+    background-color: rgb(252, 66, 24);
+    /* padding-left: 40px; */
 }
 
 .logout-btn p {
@@ -153,10 +165,11 @@
 .delete-account-btn {
     padding: 10px;
     background-color: antiquewhite;
-    border: 2px solid salmon;
-    color: rgb(253, 55, 33);
+    border: 2px solid rgb(195, 68, 68);
+    color: rgb(195, 68, 68);
     display: flex;
     align-items: center;
+    gap: 10px;
     font-weight: 600;
     border-radius: 5px;
 }
@@ -166,9 +179,13 @@
 }
 
 .cross {
-    display: none;
+    /* display: none; */
     transition: 0.5s;
-
+    border: 1px solid red;
+    color: red;
+    border-radius: 50%;
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 .delete-account-btn:hover {
@@ -177,9 +194,10 @@
 }
 
 .delete-account-btn:hover .cross {
-    display: block;
-    margin-left: 100px;
-    font-weight: 700;
+    /* display: block; */
+    /* margin-left: 25px; */
+    background-color: red;
+    color: white;
 }
 
 @media screen and (max-width:768px) {
