--- a/src/Components/Pages/ChatBox/Messages/Messages.css
+++ b/src/Components/Pages/ChatBox/Messages/Messages.css
@@ -1,5 +1,64 @@
 .messages {
-    width: 70%;
+    width: 73%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+
+}
+
+.messages-header {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 20px;
+    background-color: white;
     padding: 1%;
-    background-color: rgb(72, 70, 70);
+    padding-bottom: 0;
+    height: 10vh;
+}
+
+.messages-header img {
+    height: 50px;
+    width: 55px;
+    border-radius: 50%;
+}
+
+.messages-header h2 {
+    font-size: 2rem;
+    color: grey;
+    margin: 0;
+}
+
+.messages-content {
+    padding: 1%;
+    height: 70vh;
+    overflow-y: scroll;
+}
+
+.messages-content::-webkit-scrollbar {
+    display: none;
+}
+
+.msg-sending-form {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 100%;
+    height: 10vh;
+    border: 5px solid white;
+    border-inline: 0;
+}
+
+.msg-sending-form input {
+    width: 85%;
+    height: 50px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid rgb(49, 74, 1);
+    border-radius: 5px;
+}
+
+.msg-sending-form p {
+    color: rgb(49, 74, 1);
+    font-size: 1.5rem;
 }
