--- a/src/Components/Pages/ChatBox/Message/Message.css
+++ b/src/Components/Pages/ChatBox/Message/Message.css
@@ -18,6 +18,7 @@
 
 .own-msg p {
     background-color: yellowgreen;
+    border: 1px solid rgb(71, 103, 6);
 }
 
 .friends-msg {
@@ -31,7 +32,8 @@
 }
 
 .msg-text {
-    padding: 2% 5%;
+    padding: 1% 2%;
     border-radius: 5px;
     font-weight: 500;
+    max-width: 50%;
 }
