--- a/src/Components/Pages/Front Page/Banner.css
+++ b/src/Components/Pages/Front Page/Banner.css
@@ -41,15 +41,18 @@
 
 .front-page-links {
     margin-bottom: 2%;
-    padding-left: 2%;
+    padding-left: 7%;
     padding-bottom: 5%;
     padding-right: 4%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
     font-size: 1.8rem;
     font-weight: 700;
     animation: show-delay 3s linear 0s 1;
+}
+
+.front-page-links-position-absolute {
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 .front-page-links a {
@@ -114,7 +117,7 @@
         justify-content: space-between;
     }
 
-    .front-page-links {
+    .front-page-links-position-absolute {
         position: static;
     }
 
