--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -3,6 +3,7 @@
 }
 
 .profile {
+    position: relative;
     width: 325px;
     background-color: rgba(240, 248, 255, 0.8);
     color: rgb(45, 42, 39);
@@ -58,7 +59,7 @@
     justify-content: space-between;
     align-items: center;
     margin-top: 10%;
-    width: 100%;
+    width: 100%
 }
 
 .user-dp {
@@ -77,6 +78,10 @@
 
 .special-note {
     color: maroon;
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 10px;
 }
 
 .edit-icon {
@@ -97,103 +102,8 @@
     color: rgb(232, 64, 3);
 }
 
-.profile-page-buttons {
-    animation: show-delay 3s linear 0s 1
-}
 
-.profile-page-buttons button {
-    width: 300px;
-    margin-bottom: 16px;
-
-
-    text-align: start;
-    transition: 0.3s;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 10px 0 rgba(0, 0, 0, 0.3);
-}
-
-.chatbox-btn {
-    border: none;
-    color: darkolivegreen;
-    background-color: rgb(250, 211, 80);
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    font-size: 1.3rem;
-    font-weight: 900;
-    margin-bottom: 0;
-    padding-left: 70px;
-    border-radius: 5px;
-    border-top-right-radius: 20px;
-}
-
-.chatbox-btn:hover {
-    padding-left: 90px;
-    gap: 60px;
-    color: rgb(60, 75, 34);
-    background-color: rgb(251, 205, 55);
-}
-
-.logout-btn {
-    background-color: rgb(251, 103, 70);
-    color: rgb(250, 238, 238);
-    border: none;
-    font-size: 0.9rem;
-    font-weight: 500;
-    font-weight: 600;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding-left: 10px;
-}
-
-.logout-btn:hover {
-    color: white;
-    background-color: rgb(252, 66, 24);
-}
-
-.logout-btn p {
-    margin: 12px;
-    margin-left: 6px;
-}
-
-.delete-account-btn {
-    padding: 10px;
-    background-color: antiquewhite;
-    border: 1px solid rgb(195, 68, 68);
-    color: rgb(195, 68, 68);
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-weight: 600;
-    border-radius: 5px;
-}
-
-.delete-account-btn p {
-    margin: 0;
-}
-
-.cross {
-    transition: 0.5s;
-    border: 1px solid red;
-    color: red;
-    border-radius: 50%;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
-.delete-account-btn:hover {
-    background-color: rgb(247, 221, 187);
-    border: 1px solid rgb(254, 1, 1);
-    color: rgb(255, 6, 6);
-}
-
-.delete-account-btn:hover .cross {
-    background-color: red;
-    color: white;
-}
-
-.your-profile-btn {
+/* .your-profile-btn {
     background-color: rgb(2, 145, 2);
     color: rgb(250, 238, 238);
     border: none;
@@ -211,11 +121,26 @@
     height: 25px;
     width: 25px;
     border-radius: 50%;
-}
+} */
 
-.your-profile-btn:hover {
+/* .your-profile-btn:hover {
     color: white;
     background-color: rgb(1, 112, 1);
+} */
+
+.show-profile-details-btn {
+    background-color: rgb(22, 11, 90);
+    color: aliceblue;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    margin-top: 0;
+    padding: 10px 0;
+    font-weight: 500;
+}
+
+.show-profile-details-btn:hover {
+    background-color: rgb(9, 1, 64);
 }
 
 @media screen and (max-width:768px) {
