--- a/src/Components/Pages/ChatBox/Messages/Messages.css
+++ b/src/Components/Pages/ChatBox/Messages/Messages.css
@@ -44,13 +44,18 @@
 }
 
 .chatmate-profile-link {
-    font-size: 1.25rem;
+    text-decoration: none;
+    border: 1px solid rgb(205, 204, 204);
+    padding-inline: 1%;
+    border-radius: 3px;
+    font-size: 1rem;
     font-weight: 600;
     color: darkblue;
 }
 
 .chatmate-profile-link:hover {
-    color: rgb(6, 6, 215);
+    color: rgb(13, 13, 191);
+    border: 1px solid rgb(163, 162, 162);
 }
 
 .messages-content {
