added all options in profile details, updated error page

--- a/src/Components/Pages/ChatBox/SideBar/SideBar.css
+++ b/src/Components/Pages/ChatBox/SideBar/SideBar.css
@@ -104,6 +104,10 @@
     width: 90%;
 }
 
+.sidebar-search-input input:focus {
+    outline: none;
+}
+
 .sidebar-search-input button {
     color: rgb(49, 74, 1);
     border: none;
@@ -114,6 +118,7 @@
 .sidebar-search-input button:hover {
     color: rgb(73, 112, 1);
 }
+
 
 @media screen and (min-width: 768px) {
     .sidebar {
