--- a/src/Components/Pages/Profile/Profile.css
+++ b/src/Components/Pages/Profile/Profile.css
@@ -11,6 +11,7 @@
     padding: 5%;
     border-radius: 10px;
     animation: show-delay 1s linear 0s 1;
+    /* color: rgb(1, 1, 83); */
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4), 0 12px 30px 0 rgba(0, 0, 0, 0.4);
 }
 
@@ -141,6 +142,14 @@
 
 .show-profile-details-btn:hover {
     background-color: rgb(9, 1, 64);
+}
+
+.bubble-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    animation: show-delay 6s linear 0s 1;
 }
 
 @media screen and (max-width:768px) {
